# mkdocs_macros_regression

./: .cruft.json  .frkl.project  .gitignore  .gitlab-ci.yml  .isort.cfg  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-linux.yaml  build-mac-osx.yaml
ci/docs/: __init__.py
ci/gitlab/test/: commitlint.yml  coverage.yml  flake8.yml  mypy.yml  safety.yml  tox.yml
docs/: usage.md
src/tingex/: __init__.py  _meta.py  defaults.py  tingex.py
tests/: conftest.py  test_tingex.py
